@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+ - Do not try to execute sysinfo command when no servers are available.
+
  - Added the ``sysinfo`` command which queries the ``sys`` tables for
    system and cluster information. The command requires Crate.io >= 0.54.0
 
